--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -3,7 +3,10 @@
 {% block content %}
 
 <div id="warbler-hero"
-     class="full-width">
+     class="row full-width">
+     <img src="{{ user.header_image_url }}"
+     alt="Image for {{ user.username }}"
+     id="profile-header">
 </div>
 <img src="{{ user.image_url }}"
      alt="Image for {{ user.username }}"
@@ -80,10 +83,10 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
+    <p>{{ user.bio }}</p>
     <p class="user-location">
       <span class="bi bi-map"></span>
-      LOCATION HERE
+      {{ user.location }}
     </p>
   </div>
 
