--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -21,6 +21,7 @@
                    class="card-image">
               <p>@{{ follower.username }}</p>
             </a>
+            <p class="card-bio">{{ follower.bio }}</p>
 
             {% if g.user.is_following(follower) %}
             <form method="POST"
@@ -36,7 +37,7 @@
             {% endif %}
 
           </div>
-          <p class="card-bio">BIO HERE</p>
+
         </div>
       </div>
     </div>
