refactor code after review, change base.html form

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
         </li>
         <li><a href="/messages/new">New Message</a></li>
         <li><form action="/logout" method="POST">
-          {{form.hidden_tag()}}
+          {{g.csrf_form.hidden_tag()}}
           <button type="submit">Logout</button>
         </form></li>
       {% endif %}
