add html filled/unfilled star to warbles

--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -45,6 +45,13 @@
           <span class="text-muted">
               {{ message.timestamp.strftime('%d %B %Y') }}
             </span>
+          {% if message.user_id != g.user.id %}
+            {% if message in g.user.likes %}
+              <i class="bi bi-star-fill"></i>
+            {% else %}
+              <i class="bi bi-star"></i>
+            {% endif %}
+          {% endif %}
         </div>
       </li>
     </ul>
