--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -20,6 +20,20 @@
               {{ message.timestamp.strftime('%d %B %Y') }}
             </span>
         <p>{{ message.text }}</p>
+        {% if message.user_id != g.user.id %}
+        <form action="users/{{ user.id }}/likes" method="POST">
+          <input type="hidden" name="{{ message.id }}" value="{{ message.id }}">
+          {{ g.csrf_form.csrf_token }}
+
+
+        {% if message in g.user.likes %}
+
+          <button type="submit"><i class="bi bi-star-fill"></i></button>
+        {% else %}
+          <button type="submit"><i class="bi bi-star"></i></button>
+        </form>
+        {% endif %}
+      {% endif %}
       </div>
     </li>
 
