--- a/templates/home.html
+++ b/templates/home.html
@@ -46,21 +46,28 @@
 
     <div class="col-lg-6 col-md-8 col-sm-12">
       <ul class="list-group" id="messages">
-        {% for msg in messages %}
+        {% for message in messages %}
           <li class="list-group-item">
-            <a href="/messages/{{ msg.id }}" class="message-link"/>
-            <a href="/users/{{ msg.user.id }}">
-              <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
+            <a href="/messages/{{ message.id }}" class="message-link"></a>
+            <a href="/users/{{ message.user.id }}">
+              <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
             </a>
             <div class="message-area">
-              <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
-              <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
-              <p>{{ msg.text }}</p>
-              {% if msg.user_id != g.user.id %}
-              {% if msg in g.user.likes %}
-                <i class="bi bi-star-fill"></i>
+              <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
+              <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+              <p>{{ message.text }}</p>
+              {% if message.user_id != g.user.id %}
+              <form action="users/{{ g.user.id }}/likes" method="POST">
+                <input type="hidden" name="{{ message.id }}" value="{{ message.id }}">
+                {{ g.csrf_form.csrf_token }}
+
+
+              {% if message in g.user.likes %}
+
+                <button type="submit"><i class="bi bi-star-fill"></i></button>
               {% else %}
-                <i class="bi bi-star"></i>
+                <button type="submit"><i class="bi bi-star"></i></button>
+              </form>
               {% endif %}
             {% endif %}
             </div>
