--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -45,11 +45,15 @@
           <span class="text-muted">
               {{ message.timestamp.strftime('%d %B %Y') }}
             </span>
-          {% if message.user_id != g.user.id %}
+            {% if message.user_id != g.user.id %}
+            <form action="users/{{ g.user.id }}/likes" method="POST">
+              <input type="hidden" name="{{ message.id }}" value="{{ message.id }}">
+              {{ g.csrf_form.csrf_token }}
             {% if message in g.user.likes %}
-              <i class="bi bi-star-fill"></i>
+              <button type="submit"><i class="bi bi-star-fill"></i></button>
             {% else %}
-              <i class="bi bi-star"></i>
+              <button type="submit"><i class="bi bi-star"></i></button>
+            </form>
             {% endif %}
           {% endif %}
         </div>
