--- a/templates/home.html
+++ b/templates/home.html
@@ -57,13 +57,11 @@
               <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ message.text }}</p>
               {% if message.user_id != g.user.id %}
-              <form action="users/{{ g.user.id }}/likes" method="POST">
-                <input type="hidden" name="{{ message.id }}" value="{{ message.id }}">
+              <form action="/users/{{ g.user.id }}/likes" method="POST">
+                <input type="hidden" name="message_id" value="{{ message.id }}">
                 {{ g.csrf_form.csrf_token }}
 
-
               {% if message in g.user.likes %}
-
                 <button type="submit"><i class="bi bi-star-fill"></i></button>
               {% else %}
                 <button type="submit"><i class="bi bi-star"></i></button>
