--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -9,31 +9,28 @@
       <a href="/messages/{{ message.id }}" class="message-link"></a>
 
       <a href="/users/{{ user.id }}">
-        <img src="{{ user.image_url }}"
-             alt="user image"
-             class="timeline-image">
+        <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
       </a>
 
       <div class="message-area">
         <a href="/users/{{ user.id }}">@{{ user.username }}</a>
         <span class="text-muted">
-              {{ message.timestamp.strftime('%d %B %Y') }}
-            </span>
+          {{ message.timestamp.strftime('%d %B %Y') }}
+        </span>
         <p>{{ message.text }}</p>
+
         {% if message.user_id != g.user.id %}
-        <form action="users/{{ g.user.id }}/likes" method="POST">
-          <input type="hidden" name="{{ message.id }}" value="{{ message.id }}">
+        <form action="/users/{{g.user.id}}/likes" method="POST" style="z-index: 2;">
+          <input type="hidden" name="message_id" value="{{ message.id }}">
           {{ g.csrf_form.csrf_token }}
 
-
-        {% if message in g.user.likes %}
-
+          {% if message in g.user.likes %}
           <button type="submit"><i class="bi bi-star-fill"></i></button>
-        {% else %}
+          {% else %}
           <button type="submit"><i class="bi bi-star"></i></button>
         </form>
         {% endif %}
-      {% endif %}
+        {% endif %}
       </div>
     </li>
 
