--- a/templates/home.html
+++ b/templates/home.html
@@ -59,14 +59,13 @@
               {% if message.user_id != g.user.id %}
               <form action="/users/{{ g.user.id }}/likes" method="POST">
                 <input type="hidden" name="message_id" value="{{ message.id }}">
-                {{ g.csrf_form.csrf_token }}
-
-              {% if message in g.user.likes %}
+                {{ g.csrf_form.hidden_tag() }}
+                {% if message in g.user.likes %}
                 <button type="submit"><i class="bi bi-star-fill"></i></button>
-              {% else %}
+                {% else %}
                 <button type="submit"><i class="bi bi-star"></i></button>
+                {% endif %}
               </form>
-              {% endif %}
             {% endif %}
             </div>
           </li>
