--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -9,9 +9,7 @@
       <li class="list-group-item">
 
         <a href="{{ url_for('show_user', user_id=message.user.id) }}">
-          <img src="{{ message.user.image_url }}"
-               alt=""
-               class="timeline-image">
+          <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
         </a>
 
         <div class="message-area">
@@ -22,18 +20,15 @@
 
             {% if g.user %}
             {% if g.user.id == message.user.id %}
-            <form method="POST"
-                  action="/messages/{{ message.id }}/delete">
+            <form method="POST" action="/messages/{{ message.id }}/delete">
               <button class="btn btn-outline-danger">Delete</button>
             </form>
             {% elif g.user.is_following(message.user) %}
-            <form method="POST"
-                  action="/users/stop-following/{{ message.user.id }}">
+            <form method="POST" action="/users/stop-following/{{ message.user.id }}">
               <button class="btn btn-primary">Unfollow</button>
             </form>
             {% else %}
-            <form method="POST"
-                  action="/users/follow/{{ message.user.id }}">
+            <form method="POST" action="/users/follow/{{ message.user.id }}">
               <button class="btn btn-outline-primary btn-sm">
                 Follow
               </button>
@@ -43,18 +38,19 @@
           </div>
           <p class="single-message">{{ message.text }}</p>
           <span class="text-muted">
-              {{ message.timestamp.strftime('%d %B %Y') }}
-            </span>
-            {% if message.user_id != g.user.id %}
-            <form action="/users/{{ g.user.id }}/likes" method="POST">
-              <input type="hidden" name='message_id' value="{{ message.id }}">
-              {{ g.csrf_form.csrf_token }}
+            {{ message.timestamp.strftime('%d %B %Y') }}
+          </span>
+          {% if message.user_id != g.user.id %}
+          <form action="/users/{{ g.user.id }}/likes" method="POST">
+            <input type="hidden" name='message_id' value="{{ message.id }}">
+            <input type="hidden" name="form_origin_url" value="{{ request.url }}">
+            {{ g.csrf_form.csrf_token }}
             {% if message in g.user.likes %}
-              <button type="submit"><i class="bi bi-star-fill"></i></button>
+            <button type="submit"><i class="bi bi-star-fill"></i></button>
             {% else %}
-              <button type="submit"><i class="bi bi-star"></i></button>
-            </form>
+            <button type="submit"><i class="bi bi-star"></i></button>
             {% endif %}
+          </form>
           {% endif %}
         </div>
       </li>
