--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -23,14 +23,15 @@
         {% if message.user_id != g.user.id %}
         <form action="/users/{{g.user.id}}/likes" method="POST" style="z-index: 2;">
           <input type="hidden" name="message_id" value="{{ message.id }}">
+          <input type="hidden" name="form_origin_url" value="{{ request.url }}">
           {{ g.csrf_form.csrf_token }}
 
           {% if message in g.user.likes %}
           <button type="submit"><i class="bi bi-star-fill"></i></button>
           {% else %}
           <button type="submit"><i class="bi bi-star"></i></button>
+          {% endif %}
         </form>
-        {% endif %}
         {% endif %}
       </div>
     </li>
